--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loremipsum</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header class="header">
+        <div class="header-logo-wrap">
+            <img src="img/logo.png" alt="Loremipsum">
+        </div>
+        <div class="row">
+            <div >
+                  <a class="row-item" href="#">Home</a>    
+            </div>
+             <div >
+                  <a class="row-item" href="#">Contacts</a>    
+            </div>
+              <div >
+                  <a class="row-item" href="#">About</a>    
+            </div>
+        </div>
+    </header>
+    <div class="container">
+        <aside class="aside">
+            <div class="input">
+                <p class="p-input"> <b>Name</b><br>
+                    <input type="text" size="25">
+                </p>
+                <p class="p-input"> <b>Password</b><br>
+                    <input type="password" size="25">
+                </p>
+           </div>
+           <div class="search">
+                <p class="p">
+                    <input type="text" size="25">
+                </p>
+               <button class ="input-batton" type="submit" name="search" value="1">search</button>
+            </div>
+            <select class="input">
+                <option value="0" selected="selected">Ascending</option>
+                <option value="1">Noascending</option>
+            </select>
+        </aside>
+   </div>
+    <footer class="footer">
+        <div >
+            <i class="footer-item"> &#169 MySite.com. All rights reserved.</i>
+        </div>
+    </footer>
+</body>
+</html>
