--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         <aside class="aside">
             <div class="input">
                 <p class="p-input-h"> <b>Name</b><br>
-                    <input type="text" size="25">
+                    <input type="text" size="20">
                 </p>
                 <p class="p-input"> <b>Password</b><br>
-                    <input type="password" size="25">
+                    <input type="password" size="20">
                 </p>
             </div>
             <div class="search">
                 <p class="p">
-                    <input type="text" size="25">
+                    <input type="text" size="20">
                 </p>
                 <button class="input-button" type="submit" name="search" value="1">search</button>
             </div>
@@ -79,13 +79,30 @@
                 </div>
              </div>
        </aside>
-       <section>
-         <div class="pic">
-           <div class="card">
-            <img src="img/product.png" alt="Loremipsum">
-           </div>
-       </div>    
-       </section>
+       <section class="content">
+           <div class="pic">
+               <div class="pic-img">
+                   <img src="img/prod.jpg" alt="product" class="pic-item">
+                        <p class="pic-p">Product</p>
+                    <div class="pic-txt">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, aperiam?
+                    </div>
+                    <div class="pic-item-button">
+                        <p class="pic-item-button">999$</p>
+                        <button class="pic-button" type="submit" name="buy" value="1">Buy</button>
+                    </div>
+                </div>
+            </div>
+                <div class="pic-sect"></div>
+                <div class="pic-sect"></div>
+                <div class="pic-sect"></div>
+                <div class="pic-sect"></div>
+                <div class="pic-sect"></div>
+                <div class="pic-sect"></div>
+                <div class="pic-sect"></div>
+                <div class="pic-sect"></div>
+                <div class="pic-sect"></div>
+     </section>
     </div>
     <footer class="footer">
         <div>
