--- a/index.html
+++ b/index.html
@@ -30,50 +30,50 @@
             <div class="container">
                 <aside class="aside">
                     <div class="search">
-                        <p class="p-input-h"> <b>Name</b><br>
+                        <p class="input-item-h"> <b>Name</b><br>
                             <input type="text" size="20">
                         </p>
-                        <p class="p-input"> <b>Password</b><br>
+                        <p class="input-item"> <b>Password</b><br>
                             <input type="password" size="20">
                         </p>
                     </div>
                     <div class="search">
-                        <p class="p-aside">
+                        <p class="aside-item">
                             <input type="search" size="20">
                         </p>
                         <button class="input-button" type="submit" name="search" value="1">search</button>
                     </div>
-                        <div class="p-aside">
-                            <p class="p-input"> <b>Sort</b><br>
+                        <div class="aside-item">
+                            <p class="input-item"> <b>Sort</b><br>
                                 <select class="input">
                                     <option value="0" selected>Ascending</option>
                                     <option value="1">Noascending</option>
                                 </select>
                             </p>
                         </div>
-                        <div class="p-aside">
-                            <p class="p-input"> <b>Filter</b><br>
-                            <p class="filter"><input type="checkbox" name="cb1" value="1" checked></p>
-                            <p class="filter"><input type="checkbox" name="cb2" value="2" checked></p>
-                            <p class="filter"><input type="checkbox" name="cb3" value="3" checked></p>
+                        <div class="aside-item">
+                            <p class="input-item"> <b>Filter</b><br>
+                            <p class="filter"><input type="checkbox" name="ch" value="1" checked></p>
+                            <p class="filter"><input type="checkbox" name="ch" value="2" checked></p>
+                            <p class="filter"><input type="checkbox" name="ch" value="3" checked></p>
                             </p>
                         </div>
-                        <div class="p-aside">
-                            <p class="p-input"> <b>Category</b><br>
-                            <p class="filter"><input type="radio" name="rf_yes" value="4" checked></p>
-                            <p class="filter"><input type="radio" name="rf_no" value="5"></p>
-                            <p class="filter"><input type="radio" name="rf_may_be" value="6"></p>
+                        <div class="aside-item">
+                            <p class="input-item"> <b>Category</b><br>
+                            <p class="filter"><input type="radio" name="rf" value="4" checked></p>
+                            <p class="filter"><input type="radio" name="rf" value="5"></p>
+                            <p class="filter"><input type="radio" name="rf" value="6"></p>
                             </p>
                         </div>
-                        <div class="p-aside">
+                        <div class="aside-item">
                             <div class="slidecontainer">
-                                <p class="p-input"> <b>Price</b><br>
+                                <p class="input-item"> <b>Price</b><br>
                                     <input type="range" min="1" max="100" value="50">
                                 </p>
                             </div>
                         </div>
-                        <div class="p-aside">
-                            <p class="p-input-f"> <b>Date</b><br>
+                        <div class="aside-item">
+                            <p class="input-item-f"> <b>Date</b><br>
                                 <input type="date">
                                 <br>
                             </p>
